--- a/ui_Files/MainApp.ui
+++ b/ui_Files/MainApp.ui
@@ -840,7 +840,10 @@
                  </font>
                 </property>
                 <property name="maximum">
-                 <number>9999</number>
+                 <number>99999</number>
+                </property>
+                <property name="value">
+                 <number>2010</number>
                 </property>
                </widget>
               </item>
@@ -922,6 +925,9 @@
                 </property>
                 <property name="maximum">
                  <number>9999</number>
+                </property>
+                <property name="value">
+                 <number>1</number>
                 </property>
                </widget>
               </item>
